# rust-grpc

./: LICENSE  README.md
payments/: Cargo.toml
payments/proto/: payments.proto
payments/src/: client.rs  server.rs
