[package]
name = "payments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "payments-server"
path = "src/server.rs"

[[bin]]
name = "payments-client"
path = "src/client.rs"

[dependencies]
tonic = "0.8.3"
prost = "0.11.5"

tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.8.4"